# HiMGA

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_download.py
.github/workflows/: docs.yml  tests.yml
docs/: Makefile  conf.py
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/.doctrees/datasets/: locomo.doctree  longmemeval.doctree
docs/_build/html/.doctrees/dev/staging/: agent.doctree  data.doctree  eval.doctree  llm.doctree  memory.doctree  progress.doctree
docs/_build/html/.doctrees/module/: agent.doctree  data.doctree  eval.doctree  llm.doctree  memory.doctree
docs/_build/html/.doctrees/usage/: staging.doctree
docs/_build/html/_sources/: index.md.txt
docs/_build/html/_sources/datasets/: locomo.md.txt
docs/_build/html/_sources/dev/staging/: agent.md.txt  data.md.txt  llm.md.txt  memory.md.txt
docs/_build/html/_sources/module/: eval.md.txt  llm.md.txt  memory.md.txt
docs/_build/html/_static/: documentation_options.js
docs/_build/html/datasets/: locomo.html  longmemeval.html
docs/_build/html/dev/staging/: agent.html  data.html  eval.html  llm.html  memory.html  progress.html
docs/_build/html/module/: agent.html  data.html  eval.html  llm.html  memory.html
docs/_build/html/usage/: staging.html
docs/datasets/: longmemeval.md
docs/dev/staging/: eval.md  progress.md
docs/module/: agent.md  data.md
docs/usage/: staging.md
scripts/: data_check.py  single_question_demo.py  usage.ipynb
src/himga/: __init__.py  io.py  logger.py
src/himga/agent/: __init__.py  base.py
src/himga/data/: __init__.py  schema.py  temporal.py
src/himga/data/loaders/: __init__.py  locomo.py  longmemeval.py
src/himga/eval/: __init__.py  judge.py  metrics.py  runner.py
src/himga/llm/: __init__.py  client.py
src/himga/memory/: __init__.py  base.py  null.py
src/himga/utils/: __init__.py  resolve_datasets.py
tests/: conftest.py
tests/agent/: test_agent.py
tests/data/: conftest.py  test_locomo_loader.py  test_longmemeval_loader.py  test_schema.py  test_temporal.py
tests/data/fixtures/locomo/: msc_personas_all.json  sample.json
tests/data/fixtures/longmemeval/: sample.json  sample_extra.json
tests/eval/: test_eval.py
tests/llm/: test_llm.py
tests/memory/: test_memory.py
